--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ dependencies {
     compile 'org.webjars:angularjs:1.3.14'
     compile 'org.webjars:bootstrap:3.3.4'
     compile 'org.webjars:angular-ui-bootstrap:0.12.1-1'
-    compile 'org.webjars:angular-google-maps:2.0.11'
+    compile 'org.webjars.bower:angular-google-maps:2.1.1'
     compile 'org.webjars:lodash:3.3.1'
     compile 'org.webjars:codef0rmer-angular-dragdrop:1.0.11'
     compile 'org.webjars:jquery-ui:1.11.4'
